ingress/ingress-with-annotations.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <ingressName>
  namespace: <ingressNamespace>
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Original-Path $request_uri;
spec:
  ingressClassName: nginx
  rules:
  - host: <hostName>
    http:
      paths:
      - backend:
          service:
            name: <serviceName>
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - <hostName>
    secretName: <secretName>
