ingress/ingress-with-cors.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <IngressName>
  namespace: <Namespace>
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://domain1.com, https://domain2.com"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Server:SERVERNAME";
      more_set_headers "cache-Control: no-cache, no-store";
      more_set_headers "pragma: no-cache";

      add_header "Access-Control-Allow-Methods" "GET, PUT, POST, OPTIONS, DELETE, PATCH" always;
      add_header "Access-Control-Allow-Headers" "content-security-policy, localizationid, x-content-type-options, x-xss-protection, Access-Control-Allow-Origin";
spec:
  ingressClassName: nginx
  rules:
  - host: <Host>
    http:
      paths:
      - backend:
          service:
            name: <Service>
            port:
              number: <Port>
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - <FQDN>
    secretName: <TLS>
